--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -4,7 +4,7 @@ $icon-colors: ("green": #59bf51, "red": #bf413e, "grey":#999999)
 // Color tokens beginning with "dark-" are used in dark mode.
 /* Background colors ---------------------------*/
 $header-footer-background: #005289
-$main-background: #e0e0e0
+$main-background: #000
 $card-background: #ffffff
 $filterbar-background: #cccccc
 
