--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -1,36 +1,43 @@
+/* solarized */
+$base03:    #002b36
+$base02:    #073642
+$base01:    #586e75
+$base00:    #657b83
+$base0:     #839496
+$base1:     #93a1a1
+$base2:     #eee8d5
+$base3:     #fdf6e3
+$yellow:    #b58900
+$orange:    #cb4b16
+$red:       #dc322f
+$magenta:   #d33682
+$violet:    #6c71c4
+$blue:      #268bd2
+$cyan:      #2aa198
+$green:     #859900
+
 // To add new icon colors, just add a new entry to this map and then use it in your content.js file!
 $icon-colors: ("green": #59bf51, "red": #bf413e, "grey":#999999)
 
 // Color tokens beginning with "dark-" are used in dark mode.
 /* Background colors ---------------------------*/
 $header-footer-background: #005289
-$main-background: #000
-$card-background: #ffffff
-$filterbar-background: #cccccc
-
-$dark-header-footer-background: #003356
-$dark-main-background: #222222
-$dark-card-background: #333333
-$dark-filterbar-background: #000000
+$main-background: #002b36
+$card-background: #073642
+$filterbar-background: #073642
 
 /* Text colors ---------------------------------*/
 // Header and footer
-$title-color: #ffffff
+$title-color: $blue
 $header-footer-body-color: #eeeeee
 $header-footer-link-color: #7acbff
+$foreground-color: $base0 
+$highlight-color: $base1
 
 // Main
-$main-link-color: #32323a
+$main-link-color: $blue
 $timestamp-color: #888888
 
-$dark-main-color: #cccccc
-$dark-link-color: #7acbff
-
-// Auxiliary pages
-$dark-etc-header-color: #3086bf
-
 /* Other colors ---------------------------------*/
-$timeline-line-color: #cccccc
+$timeline-line-color: $highlight-color
 $timeline-icon-color: #ffffff
-
-$dark-timeline-line-color: #444444
