--- a/src/_includes/head.ejs
+++ b/src/_includes/head.ejs
@@ -6,11 +6,14 @@
 <meta name="author" content="<%= head.author %>" />
 <% } %>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<!-- <link
   href="https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600"
   rel="stylesheet"
   type="text/css"
-/>
+/> -->
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
