effing about with colours

--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -1,3 +1,10 @@
+/* vs code */
+$vs-base03:  #1e1e1e
+$vs-base02:  #2a2d2e
+$vs-base0:   #858585
+$vs-green:   #487e02
+$vs-blue:    #9cdcfe
+
 /* solarized */
 $base03:    #002b36
 $base02:    #073642
@@ -22,9 +29,9 @@ $icon-colors: ("green": #59bf51, "red": #bf413e, "grey":#999999)
 // Color tokens beginning with "dark-" are used in dark mode.
 /* Background colors ---------------------------*/
 $header-footer-background: #005289
-$main-background: #002b36
-$card-background: #073642
-$filterbar-background: #073642
+$main-background: $base03
+$card-background: $base02
+$filterbar-background: $base02
 
 /* Text colors ---------------------------------*/
 // Header and footer
@@ -36,7 +43,7 @@ $highlight-color: $base1
 
 // Main
 $main-link-color: $blue
-$timestamp-color: #888888
+$timestamp-color: $title-color
 
 /* Other colors ---------------------------------*/
 $timeline-line-color: $highlight-color
