--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -153,9 +153,9 @@ header.page-header
 		-webkit-margin-before: 5px
 		-webkit-margin-after: 10px
 
-	img
-		max-width: 150px
-		display: block
+	// img
+	// 	max-width: 150px
+	// 	display: block
 
 	.landscape
 		img
@@ -321,7 +321,7 @@ header p
 	z-index: 100
 	border-bottom: 1px solid $timeline-line-color
 	background-color: $filterbar-background
-	color: $green
+	color: $vs-green
 
 .timeline-filter-inner
 	display: flex
@@ -349,3 +349,6 @@ header p
 .timeline-description .timestamp
 	font-weight: bold
 	color: $title-color
+
+.timeline-description img
+	width: 100%
