--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -334,7 +334,7 @@ header p
 	margin: 0.25lh 0
 
 .category-wrapper
-	margin-left: auto
+	// margin-left: auto
 
 .timeline-description
 	line-height: normal
