colour coding entry types

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -356,3 +356,13 @@ header.page-header
 
 .timeline
 	overflow: hidden
+
+.category-talk
+	h2, .timestamp, a
+		color: $orange
+		border-bottom-color: $orange
+
+.category-job
+	h2, .timestamp, a
+		color: $yellow
+		border-bottom-color: $yellow
