--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,3 +1,20 @@
+<%
+const _categoryClasses = {
+  "job" : "category-job",
+  "talks" : "category-talk"
+}
+classForCategories = function(categories) {
+  //console.log( categories );
+  for(const cat of categories){
+    //console.log( cat );
+    if( _categoryClasses.hasOwnProperty(cat) ){
+      return(_categoryClasses[ cat ]);
+    }
+  }
+  return ""
+}
+%>
+
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
@@ -36,7 +53,7 @@
             <i class="fas fa-<%= entry.faicon %>" aria-hidden="true"></i>
             <% } %>
           </div>
-          <div class="timeline-description">
+          <div class="timeline-description <%= classForCategories(entry.categories) %>">
             <span class="timestamp"
               ><time datetime="<%- entry.datetime || entry.date %>"
                 ><%- utilities.humanizeDate(entry.datetime, entry.date) %></time
