--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -205,10 +205,10 @@ header.page-header
 		font-style: italic
 
 /* ICON COLORS */
-.timeline-icon
-	@each $name, $color in $icon-colors
-		&.#{$name}
-			background-color: $color
+// .timeline-icon
+// 	@each $name, $color in $icon-colors
+// 		&.#{$name}
+// 			background-color: $color
 
 /* RESPONSIVENESS */
 @media only screen and (min-width: 769px)
@@ -357,14 +357,20 @@ header.page-header
 .timeline
 	overflow: hidden
 
+.timeline-icon
+	// background-color: $timeline-icon-color
+	background-color: $title-color
+
 
 $color-talks: $magenta
 $color-jobs: $yellow
 
 .category-talk
-	h2, .timestamp, .entry-link
+	h2, .timestamp, .entry-link, .time
 		color: $color-talks
 		border-bottom-color: $color-talks
+	.timeline-icon
+		background-color: $color-talks
 a.category-talk
 	color: $color-talks
 
@@ -372,5 +378,7 @@ a.category-talk
 	h2, .timestamp, .entry-link
 		color: $color-jobs
 		border-bottom-color: $color-jobs
+	.timeline-icon
+		background-color: $color-jobs
 a.category-job
 	color: $color-jobs
