fixed a bunch of stuff

--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -28,10 +28,12 @@ $icon-colors: ("green": #59bf51, "red": #bf413e, "grey":#999999)
 
 // Color tokens beginning with "dark-" are used in dark mode.
 /* Background colors ---------------------------*/
-$header-footer-background: #005289
 $main-background: $base03
 $card-background: $base02
 $filterbar-background: $base02
+$filterbar-foreground: $magenta
+$header-footer-background: $filterbar-background
+
 
 /* Text colors ---------------------------------*/
 // Header and footer
@@ -48,3 +50,8 @@ $timestamp-color: $title-color
 /* Other colors ---------------------------------*/
 $timeline-line-color: $highlight-color
 $timeline-icon-color: #ffffff
+
+$color-talks: $cyan
+$color-jobs: $yellow
+$color-publications: $violet
+$color-intro: $green
