added one monokai colours

--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -1,3 +1,21 @@
+/* one monokai */
+#282C34
+#2F333D
+#D7DAE0
+#21252B
+#383E4A
+#FFFFFF
+#9DA5B4
+#BBBBBB
+#E06C75
+#E5C07B
+#676F7D
+#56B6C2
+#61AFEF
+#98C379
+#D19A66
+#C678DD
+
 /* vs code */
 $vs-base03:  #1e1e1e
 $vs-base02:  #2a2d2e
