tweaking breakpoints for header text

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -237,6 +237,12 @@ header.page-header,
 		right: 100%
 		border-right-color: $card-background
 
+@media only screen and (max-width: 1350px)
+	.timeline-filter h1
+		font-size: 1.8em	
+	.timeline-filter p
+		font-size: 0.8em !important
+
 @media only screen and (max-width: 768px)
 	.timeline::before,
 	.timeline-icon
@@ -258,7 +264,7 @@ header.page-header,
 		display: none
 	
 	.category-wrapper
-		margin-left: auto !important
+		margin-left: auto !important	
 
 @media only screen and (max-width: 414px)
 	.timeline-description img,
