changed "job" to "jobs". added entry for lead foresight researcher

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -375,13 +375,13 @@ header.page-header,
 a.category-talk
 	color: $color-talks
 
-.category-job
+.category-jobs
 	h2, .timestamp, .entry-link
 		color: $color-jobs
 		border-bottom-color: $color-jobs
 	.timeline-icon
 		background-color: $color-jobs
-a.category-job
+a.category-jobs
 	color: $color-jobs
 
 .category-intro
