--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 /* this stuff is to colour-code broad top-level categories */
 const _categoryClasses = {
   "introduction" : "category-intro",
-  "job" : "category-job",
+  "jobs" : "category-jobs",
   "publications" : "category-publications",
   "talks" : "category-talk"
 }
@@ -38,7 +38,7 @@ const _heroCategories = [
         <header class="timeline-filter">
           <div class="timeline-filter-inner">
             <h1 id="header-home">Henry Cooke</h1>
-            <p>Creative technologist, team lead, digital producer, researcher.</p>
+            <p>Creative technologist, team lead, researcher.</p>
             <div class="category-wrapper">
               <label for="category-selector">Filter:</label>
               <select id="category-selector">
